--- a/index.html
+++ b/index.html
@@ -18,10 +18,21 @@
 			<h1><span class="orange-color">Sakib Ahamed Khan</span> World!</h1>
 			<h3>I am a learner</h3>
 			<p>My name is Sakib Ahamed Khan. I studied in Computer Science and Engineering at BGC Trust University Bangladesh. I feel comfortable in coding. My dream is to become a Software Engineer. Now I learn Web Development in Programming Hero Batch.</p>
-			<a href="https://www.linkedin.com/in/sakib-ahamed-khan-5707801b1/" target="_blank" class="link-button">Hire me</a>
+			<a class="link-button" href="https://www.linkedin.com/in/sakib-ahamed-khan-5707801b1/" target="_blank" >HIRE ME</a>
 		</div>
 		<div class="half-width">
-			<img src="images/my-bg.jpg" alt="Sakib Ahamed Khan">
+			<img src="images/my-bg.jpg" alt="Sakib Ahamed Khan Picture 1">
+		</div>
+	</section>
+	<section class="dream-big">
+		<div class="half-width">
+			<img src="/images/my-bg (1).jpg" alt="Sakib Ahamed Khan Picture 2">
+		</div>
+		<div class="half-width">
+			<h1>Dream Big</h1>
+			<h2>Become a Web Developer</h2>
+			<p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topices.</p>
+			<a class="link-button" href="#" target="_blank">DOWNLOAD RESUME</a>
 		</div>
 	</section>
 </body>
