--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="half-width">
 			<h1>Welcome to </h1>
 			<h1><span class="orange-color">Sakib Ahamed Khan</span> World!</h1>
-			<h3>I am a learner</h3>
+			<h2>I am a learner</h2>
 			<p>My name is Sakib Ahamed Khan. I studied in Computer Science and Engineering at BGC Trust University Bangladesh. I feel comfortable in coding. My dream is to become a Software Engineer. Now I learn Web Development in Programming Hero Batch.</p>
 			<a class="link-button" href="https://www.linkedin.com/in/sakib-ahamed-khan-5707801b1/" target="_blank" >HIRE ME</a>
 		</div>
@@ -51,5 +51,8 @@
 			</div>
 		</div>
 	</section>
+	<footer>
+		<p>© Sakib Ahamed Khan 2021, a Web Developer.</p>
+	</footer>
 </body>
 </html>
