--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</section>
 	<section class="dream-big flexiable-container">
 		<div class="half-width">
-			<img src="/images/my-bg (1).jpg" alt="Sakib Ahamed Khan Picture 2">
+			<img src="images/my-bg (1).jpg" alt="Sakib Ahamed Khan Picture 2">
 		</div>
 		<div class="half-width">
 			<h1>Dream Big</h1>
